--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@
 
 .navbar {
     background-color: black !important;
-    margin: 0.5%;
+     margin: 0%;
     
 }
 html {
@@ -45,4 +45,8 @@ body {
 
 .right-col {
     text-align: left;
+}
+
+.jumbotron {
+    background: rgba(1,1,1,0.5);
 }
